--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "ntfs-tool",
-  "version": "2.3.3",
-  "description": "Aile Mac OS NTFS Tools",
-  "homepage": "https://ntfstool.com",
+  "version": "2.3.5-free",
+  "description": "Free and open-source NTFS & ExFAT Tool for macOS - Community fork with original author permission",
+  "homepage": "https://github.com/ntfstool/ntfstool",
   "author": {
-    "name": "NTFS Tool",
+    "name": "Dr_rOot (Original Author) & Community Contributors",
     "email": "service@ntfstool.com"
   },
-  "copyright": "Copyright© ntfstool.com",
+  "copyright": "Copyright© 2018-present Dr_rOot & Community Contributors",
   "license": "MIT",
   "main": "./dist/electron/main.js",
   "scripts": {
@@ -18,11 +18,12 @@
     "dev": "node .electron-vue/dev-runner.js",
     "e2e": "npm run pack && mocha test/e2e",
     "pack": "npm run pack:main && npm run pack:renderer",
-    "pack:main": "cross-env NODE_ENV=production webpack --progress --colors --config .electron-vue/webpack.main.config.js",
-    "pack:renderer": "cross-env NODE_ENV=production webpack --progress --colors --config .electron-vue/webpack.renderer.config.js",
+    "pack:main": "cross-env NODE_ENV=production webpack --progress --config .electron-vue/webpack.main.config.js",
+    "pack:renderer": "cross-env NODE_ENV=production webpack --progress --config .electron-vue/webpack.renderer.config.js",
     "test": "npm run unit && npm run e2e",
     "unit": "karma start test/unit/karma.conf.js",
-    "postinstall": ""
+    "postinstall": "",
+    "rebuild": "electron-rebuild -f -w usb"
   },
   "build": {
     "productName": "NTFSTool",
@@ -53,8 +54,9 @@
     },
     "publish": [
       {
-        "provider": "generic",
-        "url": "https://store.alfw.com/ntfstool/update"
+        "provider": "github",
+        "owner": "ntfstool",
+        "repo": "ntfstool"
       }
     ],
     "mac": {
@@ -62,84 +64,79 @@
       "extendInfo": {
         "LSUIElement": 1,
         "Application Category": "Utilities",
-        "Copyright(All)": "Copyright © 2020 ntfstool.com . All rights reserved.",
+        "Copyright(All)": "Copyright © 2018-present Dr_rOot & Community Contributors. All rights reserved.",
         "NSUserNotificationAlertStyle": "alert"
       }
     }
   },
   "dependencies": {
-    "axios": "^0.19.2",
+    "@electron/remote": "^2.1.3",
+    "axios": "^1.7.9",
     "diskutil": "latest",
-    "electron-log": "^4.0.7",
-    "electron-store": "^5.0.0",
-    "electron-updater": "^4.2.5",
-    "element-ui": "2.13.0",
+    "electron-log": "^5.2.2",
+    "electron-store": "^8.2.0",
+    "electron-updater": "^6.3.9",
+    "element-plus": "^2.9.1",
     "get": "^1.4.0",
-    "lodash": "^4.17.15",
-    "md5": "^2.2.1",
-    "node-cache": "^5.1.0",
+    "lodash": "^4.17.21",
+    "md5": "^2.3.0",
+    "node-cache": "^5.1.2",
     "ntfstool": "latest",
-    "usb-detection": "^4.7.0",
-    "vue": "^2.6.11",
-    "vue-electron": "^1.0.6",
-    "vue-i18n": "^8.15.3",
-    "vue-router": "^3.1.5",
-    "vuex": "^3.1.2",
+    "usb": "^2.16.0",
+    "vue": "^3.5.13",
+    "vue-i18n": "^10.0.5",
+    "vue-loader": "^17.4.2",
+    "vue-router": "^4.5.0",
+    "vuex": "^4.1.0",
     "watch-mac": "latest"
   },
   "devDependencies": {
-    "electron-middle-sass": "^1.0.2",
-    "electron-rebuild": "^1.10.1",
-    "@babel/plugin-proposal-object-rest-spread": "^7.8.3",
-    "babel-core": "^6.25.0",
-    "babel-loader": "^7.1.1",
-    "babel-plugin-istanbul": "^4.1.1",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-env": "^1.6.0",
-    "babel-preset-stage-0": "^6.24.1",
-    "babel-register": "^6.24.1",
-    "babili-webpack-plugin": "^0.1.2",
-    "cfonts": "^1.1.3",
-    "chai": "^4.0.0",
-    "chalk": "^2.2.0",
-    "copy-webpack-plugin": "^4.0.1",
-    "cross-env": "^5.0.5",
-    "css-loader": "^0.28.4",
-    "del": "^3.0.0",
+    "@babel/core": "^7.26.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.20.7",
+    "@babel/preset-env": "^7.26.0",
+    "@babel/register": "^7.25.9",
+    "@electron/rebuild": "^3.7.2",
+    "@vue/compiler-sfc": "^3.5.13",
+    "babel-loader": "^9.2.1",
+    "babel-plugin-istanbul": "^7.0.0",
+    "cfonts": "^3.3.0",
+    "chai": "^4.5.0",
+    "chalk": "^4.1.2",
+    "copy-webpack-plugin": "^12.0.2",
+    "cross-env": "^7.0.3",
+    "css-loader": "^7.1.2",
+    "del": "^6.1.1",
     "devtron": "^1.4.0",
-    "electron": "^8.0.2",
-    "electron-builder": "^22.3.6",
-    "electron-debug": "^3.0.0",
-    "electron-devtools-installer": "^2.2.4",
-    "extract-text-webpack-plugin": "^3.0.0",
-    "file-loader": "^0.11.2",
-    "html-webpack-plugin": "^2.30.1",
-    "inject-loader": "^3.0.0",
-    "karma": "^1.3.0",
+    "electron": "^33.2.1",
+    "electron-builder": "^25.1.8",
+    "electron-debug": "^4.0.2",
+    "electron-devtools-installer": "^3.2.0",
+    "html-webpack-plugin": "^5.6.3",
+    "karma": "^6.4.4",
     "karma-chai": "^0.1.0",
-    "karma-coverage": "^1.1.1",
-    "karma-electron": "^5.1.1",
-    "karma-mocha": "^1.2.0",
-    "karma-sourcemap-loader": "^0.3.7",
-    "karma-spec-reporter": "^0.0.31",
-    "karma-webpack": "^2.0.1",
-    "mocha": "^3.0.2",
+    "karma-coverage": "^2.2.1",
+    "karma-electron": "^7.3.0",
+    "karma-mocha": "^2.0.1",
+    "karma-sourcemap-loader": "^0.4.0",
+    "karma-spec-reporter": "^0.0.36",
+    "karma-webpack": "^5.0.1",
+    "mini-css-extract-plugin": "^2.9.2",
+    "mocha": "^10.8.2",
     "multispinner": "^0.2.1",
-    "node-loader": "^0.6.0",
-    "node-sass": "^4.13.1",
-    "prettier": "^1.12.1",
-    "require-dir": "^0.3.0",
-    "sass-loader": "^7.3.1",
-    "spectron": "^3.7.1",
-    "style-loader": "^0.18.2",
-    "url-loader": "^0.5.9",
+    "node-loader": "^2.0.0",
+    "prettier": "^3.4.2",
+    "require-dir": "^1.2.0",
+    "sass": "^1.83.0",
+    "sass-loader": "^16.0.4",
+    "spectron": "^19.0.0",
+    "style-loader": "^4.0.0",
+    "terser-webpack-plugin": "^5.3.11",
     "vue-html-loader": "^1.2.4",
-    "vue-loader": "^13.0.5",
-    "vue-style-loader": "^3.0.1",
-    "vue-template-compiler": "^2.4.2",
-    "webpack": "^3.12.0",
-    "webpack-dev-server": "^2.7.1",
-    "webpack-hot-middleware": "^2.18.2",
-    "webpack-merge": "^4.1.0"
+    "vue-style-loader": "^4.1.3",
+    "webpack": "^5.97.1",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.2.0",
+    "webpack-hot-middleware": "^2.26.1",
+    "webpack-merge": "^6.0.1"
   }
 }
