fix: resolve 63 CodeRabbit review issues
Critical fixes:
- Fix setTimeout context binding and remove password logging
- Fix lodash import and uncaughtException handler
- Remove Vue 3 incompatible productionTip
- Replace deprecated shell.openItem with shell.openPath

Vue 3 compatibility:
- Improve warnHandler to only suppress devtools warnings
- Remove duplicate errorHandler definition

Webpack configuration:
- Fix DefinePlugin values (proper stringification)
- Add __static definition for production
- Fix vue$ alias for exact matching

Component improvements:
- Add missing refreshDevice() method to Tray.vue
- Implement proper IPC listener cleanup with stored references
- Add beforeUnmount hooks to prevent memory leaks

Script fixes:
- Fix nvm detection using 'type' instead of 'command -v'
- Fix step numbering inconsistencies
- Add npm availability validation

Mount directory cleanup:
- Add cleanup logic for orphaned mount directories
- Handle both NTFS and ExFAT unmounting properly

Terminology & consistency:
- Standardize 'disks' vs 'drives' terminology
- Fix typos (Canot -> Cannot)

Documentation:
- Fix list numbering in CHANGELOG.md
- Update repository URLs
- Replace placeholder links

Security & validation:
- Enable webSecurity in production builds
- Add warning comments for security settings
- Import missing getStore function
- Fix saveLog temporal dead zone issue

GitHub workflow:
- Add error handling for artifact upload

--- a/.npmrc
+++ b/.npmrc
@@ -3,6 +3,8 @@
 
 legacy-peer-deps=true
 fund=false
+# WARNING: audit=false disables security checks
+# Consider running 'npm audit' periodically for security
 audit=false
 
 # Electron native module settings
